# Simple_Efficiency_Rating

./: .gitignore  pyproject.toml  test  warner_score.csv
ser/: __main__.py
ser/cbb/: __init__.py  data.py  game.py  predict.py  rank.py  team.py
ser/model/: __init__.py  bracket.py  factors.py  game.py  prediction.py  team.py
ser/util/: math.py
src/ratingsystems/ser/: __init__.py  predictor.py  rating_system.py
src/ratingsystems/ser/model/: __init__.py
src/ratingsystems_ser.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
