[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ratingsystems-ser"
version = "0.1.0"
dependencies = [
    "ratingsystems~=0.0",
]
requires-python = ">=3.11"
authors = []
maintainers = []
description = "Library for the Simple Efficiency Rating System"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["ratingsystems.ser*"]

[project.entry-points.ratingsystems]
predictor = "ratingsystems.ser:SimpleEfficiencyPredictor"
rating_system = "ratingsystems.ser:SimpleEfficiencyRatingSystem"